Fixed display overlap issue  when in fullscreen mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .header {
-  padding: 20px;
+  padding: 40px;
   h2 {
     color: $dark-mode-font-upper;
   }
@@ -104,7 +104,6 @@ body {
       font-size: 1.5rem;
       background-color: #e5e5e5b8;
       font-weight: 400;
-      border: none;
     }
   }
   .extended.show {
